--- a/.github/workflows/HW_SWR.yml
+++ b/.github/workflows/HW_SWR.yml
@@ -27,7 +27,7 @@ jobs:
     - name: Build and push image to HW Cloud SWR
       run: |
         docker login -u $HW_SWR_REGISTRY_USER -p $HW_SWR_REGISTRY_PASSWORD $REGISTRY
-        sh pull.sh
+        sh pull_hw.sh
         data=`cat images.txt`
 
         if [ $MM_NOTIFY_URL ];then
