--- a/.github/workflows/HW_SWR.yml
+++ b/.github/workflows/HW_SWR.yml
@@ -1,8 +1,9 @@
 name: HW Cloud SWR
 
 on:
-  push:
-    branches: [ main ]
+  workflow_dispatch 
+#  push:
+#    branches: [ main ]
   # pull_request:
   #   branches: [ main ]
 
