--- a/.github/workflows/aliyuncs.yaml
+++ b/.github/workflows/aliyuncs.yaml
@@ -19,7 +19,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Setup Docker buildx
-      uses: docker/setup-buildx-action@79abd3f86f79a9d68a23c75a09a9a85889262adf
+      #uses: docker/setup-buildx-action@79abd3f86f79a9d68a23c75a09a9a85889262adf
+      uses: docker/setup-buildx-action@v3.11.1
 
     - name: Check out code
       uses: actions/checkout@v2
